--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 Linux_Kernel_Learning/.vscode
-./Linux_Kernel_Learning/.obsidian/workspace.json
-./Linux_Kernel_Learning/.obsidian/core-plugins.json
+Linux_Kernel_Learning/.obsidian/workspace.json
+Linux_Kernel_Learning/.obsidian/core-plugins.json
